@@ -1,3 +1,13 @@
+2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Distribute filters in a separate sub-directory.
+	* include/Makefile.am: Fix path.
+	* include/roboptim/core/filter/cached-function.hh:
+	Rename from include/roboptim/core/cached-function.hh.
+	* include/roboptim/core/filter/cached-function.hxx:
+	Rename from include/roboptim/core/cached-function.hxx.
+	* tests/cached-function.cc: Fix include.
+
 2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Use shared pointers in caching proxy.
